--- a/welcometola.html
+++ b/welcometola.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>WELCOME TO LA</title>
-	<link rel="stylesheet" href="css/welcome.css">
+	<link rel="stylesheet" href="welcome.css">
 </head>
 
 <body>
@@ -37,37 +37,37 @@
 		
 		<section id =Santa>
 			<h2>&#9728 Santa Monica Beach &#9728</h2>
-			<img src="laimage/SANTAMONICA.JPG" width="90%" alt="Santa Monica Beach">
+			<img src="SANTAMONICA.JPG" width="90%" alt="Santa Monica Beach">
 			<a href="https://www.santamonica.com/things-to-do/santa-monica-beach/" target="_blank"><h4>Learn more</h4></a>
 		</section>
 			
 		<section id =Sign>
 			<h2>&#9728 Hollywood Sign &#9728</h2>
-			<img src="laimage/hollywoodsign.JPG" width="90%" alt="Hollywood Sign">
+			<img src="hollywoodsign.JPG" width="90%" alt="Hollywood Sign">
 			<a href="https://www.thehollywoodsign.org" target="_blank"><h4>Learn more</h4></a>
 		</section>
 
 		<section id =Fame>
 			<h2>&#9728 Hollywood Walk of Fame &#9728</h2>
-			<img src="laimage/WALKOFFAME.JPG" width = "90%" alt = "Walk of Fame">
+			<img src="WALKOFFAME.JPG" width = "90%" alt = "Walk of Fame">
 			<a href="https://walkoffame.com/browse-stars/" target="_blank"><h4>Learn more</h4></a>
 		</section>
 
 		<section id =Disneyland>
 			<h2>&#9728 Disneyland &#9728</h2>
-			<img src = "laimage/DISNEYLAND.JPG" width = "90%" alt = "Disneyland">
+			<img src = "DISNEYLAND.JPG" width = "90%" alt = "Disneyland">
 			<a href="https://disneyland.disney.go.com" target="_blank"><h4>Learn more</h4></a>
 		</section>
 
 		<section id =Universal>
 			<h2>&#9728 Universal Studio &#9728</h2>
-			<img src = "laimage/universalstudio.JPG" width="90%" alt="Universal Studio">
+			<img src = "universalstudio.JPG" width="90%" alt="Universal Studio">
 			<a href="http://www.san-diego-beaches-and-adventures.com/universal-studios-ca.html" target="_blank"><h4>Learn more</h4></a>	
 		</section>
 
 		<section id =Staple>
 			<h2>&#9728 Staple Center &#9728</h2>
-			<img src ="laimage/staplecenter.JPG" width="90%" alt="Staple Center">
+			<img src ="staplecenter.JPG" width="90%" alt="Staple Center">
 			<a href="https://www.staplescenter.com" target="_blank"><h4>Learn more</h4></a>	
 		</section>
 
