--- a/timeschedule.html
+++ b/timeschedule.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>WELCOME TO LA - Time Schedule</title>
-	<link rel="stylesheet" href="css/timeschedule.css">
+	<link rel="stylesheet" href="timeschedule.css">
 </head>
 
 <body>
