--- a/popularsites.html
+++ b/popularsites.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>WELCOME TO LA - Popular Sites</title>
-	<link rel="stylesheet" href="css/popularsites.css">
+	<link rel="stylesheet" href="popularsites.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 			Located just west of Downtown Los Angeles, Santa Monica beach is an iconic example of the famed Southern California beaches. With few Los Angeles beach options offering both large expanses of beach, bike trails and nearby activities, Santa Monica Beach has exactly what you’re looking for.
 		</details>
 		<figure>
-			<a href="https://www.santamonica.com/things-to-do/santa-monica-beach/" target="_blank"><img src="laimage/SANTAMONICA.JPG" width="50%" alt="Santa Monica Beach"></a>
+			<a href="https://www.santamonica.com/things-to-do/santa-monica-beach/" target="_blank"><img src="SANTAMONICA.JPG" width="50%" alt="Santa Monica Beach"></a>
 			<p>Click the image above to view the Stanta Monica Beach Guide:)</p>
 		</figure>
 		</article>
@@ -38,7 +38,7 @@
 		<details open><summary><b>Hollywood Sign</b>:</summary>The Hollywood Sign was built in 1923 as HOLLYWOODLAND as a promotion to sell real estate. It was flimsily made with wooden panels anchored by telephone poles, so it regularly blew over.The letters were 45ft tall and the characters were outlined by 4,000 light bulbs to make it flash in segments — HOLLY, then WOOD, then LAND, before lighting up entirely.
 		</details>
 		<figure>
-			<a href="https://www.thehollywoodsign.org" target="_blank"><img src="laimage/hollywoodsign.JPG" width="50%" alt="Hollywood Sign"></a>
+			<a href="https://www.thehollywoodsign.org" target="_blank"><img src="hollywoodsign.JPG" width="50%" alt="Hollywood Sign"></a>
 			<p>Click the image above to view the step-by-step Hollywood Sign Hiking Guide:)</p>
 		</figure>
 		</article>
@@ -50,7 +50,7 @@
 		<details open><summary><b>Hollywood Walk of Fame</b>:</summary>The Hollywood Walk of Fame is an internationally-recognized Hollywood icon. With about 24 induction ceremonies annually broadcast around the world, the constant reinforcement provided to the public has made the Walk of Fame a top visitor attraction. The Hollywood Walk of Fame is undoubtedly one of the most successful marketing ideas ever produced in the whole world.
 		</details>
 		<figure>
-			<a href="https://walkoffame.com/browse-stars/" target="_blank"><img src="laimage/WALKOFFAME.JPG" width = "50%" alt = "Walk of Fame"></a>
+			<a href="https://walkoffame.com/browse-stars/" target="_blank"><img src="WALKOFFAME.JPG" width = "50%" alt = "Walk of Fame"></a>
 			<p>Click the image above to find out how many stars you can see on Walk of Fame:)</p>
 		</figure>
 		</article>
@@ -62,7 +62,7 @@
 		<details open><summary><b>Disneyland:</b></summary>Located in Anaheim approximately half an hour southeast of LA, Disneyland is a popular attraction among little kids and big kids alike and offers fun for the whole family. There are actually two parks located in the Disneyland compound, the traditional Disneyland Park as well as the California Adventure Park, offering So Cal themed rides that are better suited to the thrill seekers amongst you. Both parks offer all the magic and insight you've come to expect from Disney.
 		</details>
 		<figure>
-			<a href="https://disneyland.disney.go.com" target="_blank"><img src = "laimage/DISNEYLAND.JPG" width = "50%" alt = "Disneyland"></a>
+			<a href="https://disneyland.disney.go.com" target="_blank"><img src = "DISNEYLAND.JPG" width = "50%" alt = "Disneyland"></a>
 			<p>Click the image above to book a ticket on Disneyland Official Site:)</p>
 		</figure>
 		</article>
@@ -73,7 +73,7 @@
 		<article id="Universal Studio">
 		<details open><summary><b>Universal Studio</b>:</summary>Universal Studios CA, the popular theme Park in Hollywood California. Located in world-famous Hollywood, this park offers tours, rides and fun Hollywood style.If you love theme parks, a visit to Southern California should definitely include a day at Universal Studios Theme Park. </details>
 		<figure>
-			<a href="http://www.san-diego-beaches-and-adventures.com/universal-studios-ca.html" target="_blank"><img src = "laimage/universalstudio.JPG" width="50%" alt="Universal Studio"></a>
+			<a href="http://www.san-diego-beaches-and-adventures.com/universal-studios-ca.html" target="_blank"><img src = "universalstudio.JPG" width="50%" alt="Universal Studio"></a>
 			<p>Click the image above to find out things to do in Universal Studio in advance:)</p>
 		</figure>
 		</article>
@@ -82,7 +82,7 @@
 		<article id="Staple Center">
 		<details open><summary><b>Staple Center</b>:</summary>STAPLES Center has undoubtedly developed an unrivaled reputation for excellence having established itself as the Sports and Entertainment Center of the World. Beginning twenty one years ago with Bruce Springsteen and the E Street Band’s opening night concert on October 17, 1999, more than 75 million guests have come to the AEG-owned and operated STAPLES Center to attend a schedule of prestigious concerts, sporting events, award shows, family shows and other major attractions unmatched by any arena.</details>
 		<figure>
-			<a href="https://www.staplescenter.com" target="_blank"><img src ="laimage/staplecenter.JPG" width="50%" alt="Staple Center"></a>
+			<a href="https://www.staplescenter.com" target="_blank"><img src ="staplecenter.JPG" width="50%" alt="Staple Center"></a>
 			<p>Click the image above to book a ticket for the next event at Staple Center:)</p>
 		</figure>
 		</article>
