--- a/nightlife.html
+++ b/nightlife.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>WELCOME TO LA - Nightlife</title>
-	<link rel="stylesheet" href="css/nightlife.css">
+	<link rel="stylesheet" href="nightlife.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
 	<main>
 		<h2>&#9992 Nightlife in LA</h2>
-			<video src="video/LAvideo.MP4" width="400" controls>
+			<video src="LAvideo.MP4" width="400" controls>
 			Your browser does not support the <code>video</code> element :(
 			</video>
 	</main>
