--- a/welcometola.html
+++ b/welcometola.html
@@ -74,7 +74,7 @@
 		
 		<br><
 		<h6></h6>
-		<a href="wechat.JPG"><h5 id =one>Contact</h5></a>
+		<a href="https://jyqhsn.github.io/sample4/wechat.JPG"><h5 id =one>Contact</h5></a>
 		<h3></h3>
 		
 
